--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="crime_title_hint">Enter a title for the count.</string>
-    <string name="crime_title_label">Title.</string>
-    <string name="crime_details_label">Details.</string>
+    <string name="bank_name">Bank name.</string>
+    <string name="balance">Your balance.</string>
     <string name="crime_solved_label">Solved?</string>
     <string name="counts_title">counts</string>
     <string name="new_crime">New count</string>
