--- a/client/app/src/main/res/values/strings.xml
+++ b/client/app/src/main/res/values/strings.xml
@@ -2,13 +2,13 @@
     <string name="app_name">Spender</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="crime_title_hint">Enter a title for the count.</string>
+    <string name="count_name">Enter a count name.</string>
     <string name="bank_name">Bank name.</string>
     <string name="balance">Your balance.</string>
     <string name="counts_title">counts</string>
-    <string name="new_crime">New count</string>
+    <string name="new_count">New count</string>
     <string name="show_subtitle">Show subtitle</string>
     <string name="hide_subtitle">Hide subtitle</string>
     <string name="subtitle">If you see something, say something.</string>
-    <string name="delete_crime">Delete</string>
+    <string name="delete_count">Delete</string>
 </resources>
